# samp-plugin-api

./: .gitignore  CMakeLists.txt  DEPS  README.md
src/: CMakeLists.txt
src/api/: Api.cpp  Api.def  Api.rc  CMakeLists.txt  Config.cpp  Config.hpp  Endpoint.cpp  Endpoint.hpp  FieldsAlloc.hpp  Handler.cpp  Handler.hpp  Header.hpp  LogSink.cpp  LogSink.hpp  MimeTypes.cpp  MimeTypes.hpp  Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  Reply.cpp  Reply.hpp  Request.cpp  Request.hpp  RequestParser.cpp  RequestParser.hpp  Route.cpp  Route.hpp  SampTypes.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  Types.hpp
src/share/: CMakeLists.txt  Config.hpp  xxhash.c  xxhash.h
src/share/log/: CMakeLists.txt  Log.cpp  Log.hpp
